{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 3338,
  "lineage": "304f9756-07b2-b313-f960-b2e96ecc24a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa6a7b7d431afde9",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-0aa6a7b7d431afde9",
            "association_id": "eipassoc-0d22fcf404ea87aa8",
            "domain": "vpc",
            "id": "eipalloc-0aa6a7b7d431afde9",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-028c5e2bbc23e2793",
            "private_dns": "ip-10-0-0-5.eu-north-1.compute.internal",
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-13-60-128-23.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.128.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:internet-gateway/igw-02d016bb6f83e3430",
            "id": "igw-02d016bb6f83e3430",
            "owner_id": "851725350979",
            "tags": {
              "Name": "toni-igw"
            },
            "tags_all": {
              "Name": "toni-igw"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/app-lb/69906c67786a3d5b",
            "arn_suffix": "app/app-lb/69906c67786a3d5b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1067351767.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/app-lb/69906c67786a3d5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09351bd6e94aac2a7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09a387c98f0bef5b2"
              },
              {
                "subnet_id": "subnet-0daf5290cd486861d"
              },
              {
                "subnet_id": "subnet-0f4a1c061bacc906e"
              }
            ],
            "subnets": [
              "subnet-09a387c98f0bef5b2",
              "subnet-0daf5290cd486861d",
              "subnet-0f4a1c061bacc906e"
            ],
            "vpc_id": "vpc-0e24b159677f755cc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/app-lb/69906c67786a3d5b/186a8d8000aebd27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/hello-world-tg/2376326d1e18ffa0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/app-lb/69906c67786a3d5b/186a8d8000aebd27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/app-lb/69906c67786a3d5b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "alb-listener"
            },
            "tags_all": {
              "Name": "alb-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_lb.app_lb",
            "aws_lb_target_group.alb_ec2_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/hello-world-tg/2376326d1e18ffa0",
            "arn_suffix": "targetgroup/hello-world-tg/2376326d1e18ffa0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/hello-world-tg/2376326d1e18ffa0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hello-world-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alb_ec2_tg"
            },
            "tags_all": {
              "Name": "alb_ec2_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa6a7b7d431afde9",
            "association_id": "eipassoc-0d22fcf404ea87aa8",
            "connectivity_type": "public",
            "id": "nat-0960516a0c1d00ec9",
            "network_interface_id": "eni-028c5e2bbc23e2793",
            "private_ip": "10.0.0.5",
            "public_ip": "13.60.128.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4a1c061bacc906e",
            "tags": {
              "Name": "Nat Gateway"
            },
            "tags_all": {
              "Name": "Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-03161727c79d54a7a",
            "id": "rtb-03161727c79d54a7a",
            "owner_id": "851725350979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0960516a0c1d00ec9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private subnet Route Table"
            },
            "tags_all": {
              "Name": "Private subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-0e4c0135560602b09",
            "id": "rtb-0e4c0135560602b09",
            "owner_id": "851725350979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d016bb6f83e3430",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet Route Table"
            },
            "tags_all": {
              "Name": "Public subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059f6e7c132486003",
            "route_table_id": "rtb-03161727c79d54a7a",
            "subnet_id": "subnet-0be4e79d9d9489392"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b3838d8d8a2dd4d",
            "route_table_id": "rtb-03161727c79d54a7a",
            "subnet_id": "subnet-0c12a527cf4c4d9fa"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0b2909daec90e0b",
            "route_table_id": "rtb-03161727c79d54a7a",
            "subnet_id": "subnet-0f3c9d93324ada453"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0129e58edacc95d46",
            "route_table_id": "rtb-0e4c0135560602b09",
            "subnet_id": "subnet-0f4a1c061bacc906e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003a6dd86a45448c9",
            "route_table_id": "rtb-0e4c0135560602b09",
            "subnet_id": "subnet-09a387c98f0bef5b2"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097b0faff1606ca30",
            "route_table_id": "rtb-0e4c0135560602b09",
            "subnet_id": "subnet-0daf5290cd486861d"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-09351bd6e94aac2a7",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09351bd6e94aac2a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-01baa674e3031ef50",
            "description": "Security Group for Web Server Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01baa674e3031ef50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-09351bd6e94aac2a7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-0e63fbca9e9e7bb65",
            "description": "Security group for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e63fbca9e9e7bb65",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09351bd6e94aac2a7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0be4e79d9d9489392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be4e79d9d9489392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toni-public-subnet-1"
            },
            "tags_all": {
              "Name": "toni-public-subnet-1"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0c12a527cf4c4d9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c12a527cf4c4d9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toni-public-subnet-2"
            },
            "tags_all": {
              "Name": "toni-public-subnet-2"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0f3c9d93324ada453",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3c9d93324ada453",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toni-public-subnet-3"
            },
            "tags_all": {
              "Name": "toni-public-subnet-3"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0f4a1c061bacc906e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4a1c061bacc906e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toni-public-subnet-1"
            },
            "tags_all": {
              "Name": "toni-public-subnet-1"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-09a387c98f0bef5b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a387c98f0bef5b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toni-public-subnet-2"
            },
            "tags_all": {
              "Name": "toni-public-subnet-2"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0daf5290cd486861d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daf5290cd486861d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toni-public-subnet-3"
            },
            "tags_all": {
              "Name": "toni-public-subnet-3"
            },
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "dependencies": [
            "aws_vpc.toni_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "toni_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:vpc/vpc-0e24b159677f755cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02c9cafe33fab3f08",
            "default_route_table_id": "rtb-016841e10e7b5684c",
            "default_security_group_id": "sg-0452852282c7e8f21",
            "dhcp_options_id": "dopt-01fd146d2877d5712",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e24b159677f755cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016841e10e7b5684c",
            "owner_id": "851725350979",
            "tags": {
              "Name": "toni-vpc"
            },
            "tags_all": {
              "Name": "toni-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds.module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-0ea688c91fade9ffc",
            "description": "Control traffic to/from RDS Aurora hello-world-tg",
            "egress": [],
            "id": "sg-0ea688c91fade9ffc",
            "ingress": [],
            "name": "hello-world-tg-20240707201048891400000001",
            "name_prefix": "hello-world-tg-",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "hello-world",
              "Name": "hello-world-tg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "hello-world",
              "Name": "hello-world-tg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e24b159677f755cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.toni_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}